# tidal-sdk-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: .env.example  __init__.py  conftest.py
tests/auth/: __init__.py  test_auth.py
tests/common/: __init__.py  test_errors.py  test_http.py  test_time.py  test_types.py
tidal_sdk/: __init__.py
tidal_sdk/auth/: __init__.py  auth.py
tidal_sdk/common/: __init__.py  errors.py  http.py  time.py  types.py
